# models/user.go
@@ -2,25 +2,25 @@ package models
 
 import (
 	"errors"
-	"strconv"
-	"time"
 )
 
 var (
-	UserList map[string]*User
+	UserList map[int]*User
 )
 
 func init() {
-	UserList = make(map[string]*User)
-	u := User{"user_11111", "admin", "admin", Profile{"male", 20, "Singapore", "astaxie@gmail.com"}}
-	UserList["user_11111"] = &u
+	UserList = make(map[int]*User)
+	u := User{1, "admin", "123456"}
+	UserList[1] = &u
+
+	u1 := User{2, "user", "123456"}
+	UserList[2] = &u1
 }
 
 type User struct {
-	Id       string
+	Id       int
 	Username string
 	Password string
-	Profile  Profile
 }
 
 type Profile struct {
@@ -30,42 +30,30 @@ type Profile struct {
 	Email   string
 }
 
-func AddUser(u User) string {
-	u.Id = "user_" + strconv.FormatInt(time.Now().UnixNano(), 10)
+func AddUser(u User) int {
+	u.Id = 3
 	UserList[u.Id] = &u
 	return u.Id
 }
 
-func GetUser(uid string) (u *User, err error) {
+func GetUser(uid int) (u *User, err error) {
 	if u, ok := UserList[uid]; ok {
 		return u, nil
 	}
 	return nil, errors.New("User not exists")
 }
 
-func GetAllUsers() map[string]*User {
+func GetAllUsers() map[int]*User {
 	return UserList
 }
 
-func UpdateUser(uid string, uu *User) (a *User, err error) {
+func UpdateUser(uid int, uu *User) (a *User, err error) {
 	if u, ok := UserList[uid]; ok {
 		if uu.Username != "" {
 			u.Username = uu.Username
 		}
 		if uu.Password != "" {
 			u.Password = uu.Password
-		}
-		if uu.Profile.Age != 0 {
-			u.Profile.Age = uu.Profile.Age
-		}
-		if uu.Profile.Address != "" {
-			u.Profile.Address = uu.Profile.Address
-		}
-		if uu.Profile.Gender != "" {
-			u.Profile.Gender = uu.Profile.Gender
-		}
-		if uu.Profile.Email != "" {
-			u.Profile.Email = uu.Profile.Email
 		}
 		return u, nil
 	}
@@ -81,6 +69,15 @@ func Login(username, password string) bool {
 	return false
 }
 
-func DeleteUser(uid string) {
+func GetUserByNameAndPassword(username, password string) User {
+	for _, u := range UserList {
+		if u.Username == username && u.Password == password {
+			return *u
+		}
+	}
+	return User{0,"",""}
+}
+
+func DeleteUser(uid int) {
 	delete(UserList, uid)
 }
